@@ -213,6 +213,11 @@ OIDCMetadataDir /var/cache/apache2/mod_oidc/metadata
 #OIDCJWKSRefreshInterval <seconds>
 
 # (Optional)
+# Acceptable offset (both before and after) for checking the \"iat\" (= issued at) timestamp in the id_token.
+# When not defined the default is 600 seconds.
+#OIDCIDTokenIatSlack <seconds>
+
+# (Optional)
 # Define the cookie name for the session cookie.
 # When not defined the default is "mod-oidc".
 #OIDCCookie <cookie-name>
