@@ -1,3 +1,6 @@
+3/25/2014
+- support configurable iat checking acceptance interval
+
 3/24/2014
 - add support for Apache 2.4 mutex permission call
 - fix shm post_config init bug/typo
